updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>Vegetarian, Musician, Aspiring Web Developer</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Long Beach, California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Cooking, Playing Music, Mountain Hiking</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Allowing companies to track and map data via websites</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, California</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love problem-solving and mastering software languages</p>
     </section>
 
     <footer id="footer">
